--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     padding: 0;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 /* navbar */
@@ -15,13 +16,13 @@ body{
     margin-top: -2px;
 }
 
-h2{
+.container h2{
     margin-top: 300px;
 }
 
 .container a{
     text-decoration:none;
-    color: gray;
+    color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -30,7 +31,7 @@ h2{
     margin-top: -25px;
 }
 
-p{
+.container p{
     margin-top: 100px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: gray;
@@ -75,19 +76,17 @@ p{
 
 
 .main .mainHeader .gambar img{
-    border-radius: 8px;
+    border-radius: 9px;
     cursor: pointer;
 }
 
 .containerContent{
-    background-image: url('airpods_3rd_gen__dhy5bknhvtqq_large.jpg');
+    background-image: url('airpods2.png');
     background-repeat: no-repeat;
-    height: 300px;
+    height: 500px;
     background-position: center;
-    background-size: 600px;
-    
-    
-
+    background-color: gainsboro;
+    background-size: cover;
 }
 
 .containerContent .text {
@@ -95,21 +94,61 @@ p{
     flex-direction: column;
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
+    padding-top: 150px;
 }
 
 .containerContent .link {
     text-align: center;
     font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
 
 .containerContent a{
     text-decoration: none;
     color:  blue;
     padding: 25px;
+
 }
 
 .containerContent h3{
-    font-weight: 100;
+    font-weight: 300;
 }
 
+.containerContent h1{
+    font-weight: bold;
+    font-size: 40px;
+}
 
+/* footer */
+
+.Mainfooter{
+    background-color: gray;
+    color: white;
+    height: 300px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.Mainfooter a{
+    margin-top: 20px;
+}
+
+.Mainfooter h3{
+    margin-bottom: -10px;
+}
+
+.Mainfooter div{
+    display: flex;
+    flex-direction: column;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
+}
+
+.Mainfooter a:hover{
+    text-decoration: underline;
+}
